<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tittle"
                android:textStyle="bold"
                android:textSize="36sp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/code_example"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/first_name_example"
                />


            <CheckBox
                android:id="@+id/chk_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/has_second_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <EditText
                android:id="@+id/et_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/second_name_example"
                android:enabled="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name_example"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <EditText
                android:id="@+id/et_last_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name2_example"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/age_example"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <Spinner
                android:id="@+id/sp_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_rol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rol"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="12dp"
                />
            <RadioGroup
                android:id="@+id/rg_rol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                >
            </RadioGroup>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/black"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>